// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EvidenceCard theme x density > matches the dark / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="dark"
>
  <article
    class="rh-card rh-card--raised rh-card--pad-md rh-evidence-card"
    data-authority="accepted"
    data-evidence-id="E0482"
  >
    <div
      class="rh-card__header"
    >
      <span
        class="rh-evidence-card__title"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-quote rh-icon"
          data-icon="quote"
          fill="none"
          focusable="false"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
          />
          <path
            d="M5 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
          />
        </svg>
        <span
          class="rh-evidence-card__id"
        >
          E0482
        </span>
        <span
          class="rh-evidence-card__work"
        >
          Hydrogel stiffness and neurite outgrowth (2024)
        </span>
      </span>
      <span
        class="rh-evidence-card__badges"
      >
        <span
          class="rh-badge rh-badge--sm rh-badge--status-accepted rh-authority-badge"
          data-authority="accepted"
          data-status="accepted"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-check rh-icon"
            data-icon="circle-check"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="m16 9-5.5 5.5L8 12"
            />
          </svg>
          <span
            class="rh-badge__label"
          >
            Accepted
          </span>
        </span>
      </span>
    </div>
    <div
      class="rh-card__body"
    >
      <blockquote
        class="rh-evidence-card__quote"
      >
        Storage modulus rose from 1.2 to 8.4 kPa over 24 h, with no measurable change in swelling ratio.
      </blockquote>
      <p
        class="rh-evidence-card__numeric"
      >
        <span
          class="rh-evidence-card__numeric-value"
        >
          8.4
           kPa
        </span>
        <span
          class="rh-evidence-card__numeric-meta"
        >
          storage modulus
        </span>
        <span
          class="rh-evidence-card__numeric-meta"
        >
          24 h timepoint
        </span>
      </p>
      <dl
        class="rh-evidence-card__facts"
      >
        <div
          class="rh-evidence-card__fact"
        >
          <dt
            class="rh-text-label"
          >
            Work
          </dt>
          <dd
            class="rh-evidence-card__fact-value"
          >
            W0017
          </dd>
        </div>
        <div
          class="rh-evidence-card__fact"
        >
          <dt
            class="rh-text-label"
          >
            Type
          </dt>
          <dd
            class="rh-evidence-card__fact-value"
          >
            measurement
          </dd>
        </div>
        <div
          class="rh-evidence-card__fact"
        >
          <dt
            class="rh-text-label"
          >
            Strength
          </dt>
          <dd
            class="rh-evidence-card__fact-value"
          >
            direct
          </dd>
        </div>
        <div
          class="rh-evidence-card__fact"
        >
          <dt
            class="rh-text-label"
          >
            Origin
          </dt>
          <dd
            class="rh-evidence-card__fact-value"
          >
            researcher
          </dd>
        </div>
        <div
          class="rh-evidence-card__fact"
        >
          <dt
            class="rh-text-label"
          >
            Field
          </dt>
          <dd
            class="rh-evidence-card__fact-value"
          >
            materials
          </dd>
        </div>
      </dl>
    </div>
    <div
      class="rh-card__footer"
    >
      <div
        class="rh-evidence-card__footer"
      >
        <span
          class="rh-source-anchor rh-source-anchor--inline"
        >
          <span
            class="rh-source-anchor__row"
          >
            <a
              aria-label="Open source at A0017-3 · p.6 · B0081 · chars 1204–1361"
              class="rh-source-anchor__open"
              href="rh://artifact/A0017-3?page=6&block=B0081"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-quote rh-icon"
                data-icon="quote"
                fill="none"
                focusable="false"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
                />
                <path
                  d="M5 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
                />
              </svg>
              <span
                class="rh-source-anchor__target"
              >
                A0017-3 · p.6 · B0081 · chars 1204–1361
              </span>
            </a>
          </span>
        </span>
      </div>
    </div>
  </article>
</div>
`;

exports[`EvidenceCard theme x density > matches the dark / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="dark"
>
  <article
    class="rh-card rh-card--raised rh-card--pad-md rh-evidence-card"
    data-authority="accepted"
    data-evidence-id="E0482"
  >
    <div
      class="rh-card__header"
    >
      <span
        class="rh-evidence-card__title"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-quote rh-icon"
          data-icon="quote"
          fill="none"
          focusable="false"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
          />
          <path
            d="M5 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
          />
        </svg>
        <span
          class="rh-evidence-card__id"
        >
          E0482
        </span>
        <span
          class="rh-evidence-card__work"
        >
          Hydrogel stiffness and neurite outgrowth (2024)
        </span>
      </span>
      <span
        class="rh-evidence-card__badges"
      >
        <span
          class="rh-badge rh-badge--sm rh-badge--status-accepted rh-authority-badge"
          data-authority="accepted"
          data-status="accepted"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-check rh-icon"
            data-icon="circle-check"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="m16 9-5.5 5.5L8 12"
            />
          </svg>
          <span
            class="rh-badge__label"
          >
            Accepted
          </span>
        </span>
      </span>
    </div>
    <div
      class="rh-card__body"
    >
      <blockquote
        class="rh-evidence-card__quote"
      >
        Storage modulus rose from 1.2 to 8.4 kPa over 24 h, with no measurable change in swelling ratio.
      </blockquote>
      <p
        class="rh-evidence-card__numeric"
      >
        <span
          class="rh-evidence-card__numeric-value"
        >
          8.4
           kPa
        </span>
        <span
          class="rh-evidence-card__numeric-meta"
        >
          storage modulus
        </span>
        <span
          class="rh-evidence-card__numeric-meta"
        >
          24 h timepoint
        </span>
      </p>
      <dl
        class="rh-evidence-card__facts"
      >
        <div
          class="rh-evidence-card__fact"
        >
          <dt
            class="rh-text-label"
          >
            Work
          </dt>
          <dd
            class="rh-evidence-card__fact-value"
          >
            W0017
          </dd>
        </div>
        <div
          class="rh-evidence-card__fact"
        >
          <dt
            class="rh-text-label"
          >
            Type
          </dt>
          <dd
            class="rh-evidence-card__fact-value"
          >
            measurement
          </dd>
        </div>
        <div
          class="rh-evidence-card__fact"
        >
          <dt
            class="rh-text-label"
          >
            Strength
          </dt>
          <dd
            class="rh-evidence-card__fact-value"
          >
            direct
          </dd>
        </div>
        <div
          class="rh-evidence-card__fact"
        >
          <dt
            class="rh-text-label"
          >
            Origin
          </dt>
          <dd
            class="rh-evidence-card__fact-value"
          >
            researcher
          </dd>
        </div>
        <div
          class="rh-evidence-card__fact"
        >
          <dt
            class="rh-text-label"
          >
            Field
          </dt>
          <dd
            class="rh-evidence-card__fact-value"
          >
            materials
          </dd>
        </div>
      </dl>
    </div>
    <div
      class="rh-card__footer"
    >
      <div
        class="rh-evidence-card__footer"
      >
        <span
          class="rh-source-anchor rh-source-anchor--inline"
        >
          <span
            class="rh-source-anchor__row"
          >
            <a
              aria-label="Open source at A0017-3 · p.6 · B0081 · chars 1204–1361"
              class="rh-source-anchor__open"
              href="rh://artifact/A0017-3?page=6&block=B0081"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-quote rh-icon"
                data-icon="quote"
                fill="none"
                focusable="false"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
                />
                <path
                  d="M5 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
                />
              </svg>
              <span
                class="rh-source-anchor__target"
              >
                A0017-3 · p.6 · B0081 · chars 1204–1361
              </span>
            </a>
          </span>
        </span>
      </div>
    </div>
  </article>
</div>
`;

exports[`EvidenceCard theme x density > matches the light / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="light"
>
  <article
    class="rh-card rh-card--raised rh-card--pad-md rh-evidence-card"
    data-authority="accepted"
    data-evidence-id="E0482"
  >
    <div
      class="rh-card__header"
    >
      <span
        class="rh-evidence-card__title"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-quote rh-icon"
          data-icon="quote"
          fill="none"
          focusable="false"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
          />
          <path
            d="M5 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
          />
        </svg>
        <span
          class="rh-evidence-card__id"
        >
          E0482
        </span>
        <span
          class="rh-evidence-card__work"
        >
          Hydrogel stiffness and neurite outgrowth (2024)
        </span>
      </span>
      <span
        class="rh-evidence-card__badges"
      >
        <span
          class="rh-badge rh-badge--sm rh-badge--status-accepted rh-authority-badge"
          data-authority="accepted"
          data-status="accepted"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-check rh-icon"
            data-icon="circle-check"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="m16 9-5.5 5.5L8 12"
            />
          </svg>
          <span
            class="rh-badge__label"
          >
            Accepted
          </span>
        </span>
      </span>
    </div>
    <div
      class="rh-card__body"
    >
      <blockquote
        class="rh-evidence-card__quote"
      >
        Storage modulus rose from 1.2 to 8.4 kPa over 24 h, with no measurable change in swelling ratio.
      </blockquote>
      <p
        class="rh-evidence-card__numeric"
      >
        <span
          class="rh-evidence-card__numeric-value"
        >
          8.4
           kPa
        </span>
        <span
          class="rh-evidence-card__numeric-meta"
        >
          storage modulus
        </span>
        <span
          class="rh-evidence-card__numeric-meta"
        >
          24 h timepoint
        </span>
      </p>
      <dl
        class="rh-evidence-card__facts"
      >
        <div
          class="rh-evidence-card__fact"
        >
          <dt
            class="rh-text-label"
          >
            Work
          </dt>
          <dd
            class="rh-evidence-card__fact-value"
          >
            W0017
          </dd>
        </div>
        <div
          class="rh-evidence-card__fact"
        >
          <dt
            class="rh-text-label"
          >
            Type
          </dt>
          <dd
            class="rh-evidence-card__fact-value"
          >
            measurement
          </dd>
        </div>
        <div
          class="rh-evidence-card__fact"
        >
          <dt
            class="rh-text-label"
          >
            Strength
          </dt>
          <dd
            class="rh-evidence-card__fact-value"
          >
            direct
          </dd>
        </div>
        <div
          class="rh-evidence-card__fact"
        >
          <dt
            class="rh-text-label"
          >
            Origin
          </dt>
          <dd
            class="rh-evidence-card__fact-value"
          >
            researcher
          </dd>
        </div>
        <div
          class="rh-evidence-card__fact"
        >
          <dt
            class="rh-text-label"
          >
            Field
          </dt>
          <dd
            class="rh-evidence-card__fact-value"
          >
            materials
          </dd>
        </div>
      </dl>
    </div>
    <div
      class="rh-card__footer"
    >
      <div
        class="rh-evidence-card__footer"
      >
        <span
          class="rh-source-anchor rh-source-anchor--inline"
        >
          <span
            class="rh-source-anchor__row"
          >
            <a
              aria-label="Open source at A0017-3 · p.6 · B0081 · chars 1204–1361"
              class="rh-source-anchor__open"
              href="rh://artifact/A0017-3?page=6&block=B0081"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-quote rh-icon"
                data-icon="quote"
                fill="none"
                focusable="false"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
                />
                <path
                  d="M5 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
                />
              </svg>
              <span
                class="rh-source-anchor__target"
              >
                A0017-3 · p.6 · B0081 · chars 1204–1361
              </span>
            </a>
          </span>
        </span>
      </div>
    </div>
  </article>
</div>
`;

exports[`EvidenceCard theme x density > matches the light / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="light"
>
  <article
    class="rh-card rh-card--raised rh-card--pad-md rh-evidence-card"
    data-authority="accepted"
    data-evidence-id="E0482"
  >
    <div
      class="rh-card__header"
    >
      <span
        class="rh-evidence-card__title"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-quote rh-icon"
          data-icon="quote"
          fill="none"
          focusable="false"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
          />
          <path
            d="M5 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
          />
        </svg>
        <span
          class="rh-evidence-card__id"
        >
          E0482
        </span>
        <span
          class="rh-evidence-card__work"
        >
          Hydrogel stiffness and neurite outgrowth (2024)
        </span>
      </span>
      <span
        class="rh-evidence-card__badges"
      >
        <span
          class="rh-badge rh-badge--sm rh-badge--status-accepted rh-authority-badge"
          data-authority="accepted"
          data-status="accepted"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-check rh-icon"
            data-icon="circle-check"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="m16 9-5.5 5.5L8 12"
            />
          </svg>
          <span
            class="rh-badge__label"
          >
            Accepted
          </span>
        </span>
      </span>
    </div>
    <div
      class="rh-card__body"
    >
      <blockquote
        class="rh-evidence-card__quote"
      >
        Storage modulus rose from 1.2 to 8.4 kPa over 24 h, with no measurable change in swelling ratio.
      </blockquote>
      <p
        class="rh-evidence-card__numeric"
      >
        <span
          class="rh-evidence-card__numeric-value"
        >
          8.4
           kPa
        </span>
        <span
          class="rh-evidence-card__numeric-meta"
        >
          storage modulus
        </span>
        <span
          class="rh-evidence-card__numeric-meta"
        >
          24 h timepoint
        </span>
      </p>
      <dl
        class="rh-evidence-card__facts"
      >
        <div
          class="rh-evidence-card__fact"
        >
          <dt
            class="rh-text-label"
          >
            Work
          </dt>
          <dd
            class="rh-evidence-card__fact-value"
          >
            W0017
          </dd>
        </div>
        <div
          class="rh-evidence-card__fact"
        >
          <dt
            class="rh-text-label"
          >
            Type
          </dt>
          <dd
            class="rh-evidence-card__fact-value"
          >
            measurement
          </dd>
        </div>
        <div
          class="rh-evidence-card__fact"
        >
          <dt
            class="rh-text-label"
          >
            Strength
          </dt>
          <dd
            class="rh-evidence-card__fact-value"
          >
            direct
          </dd>
        </div>
        <div
          class="rh-evidence-card__fact"
        >
          <dt
            class="rh-text-label"
          >
            Origin
          </dt>
          <dd
            class="rh-evidence-card__fact-value"
          >
            researcher
          </dd>
        </div>
        <div
          class="rh-evidence-card__fact"
        >
          <dt
            class="rh-text-label"
          >
            Field
          </dt>
          <dd
            class="rh-evidence-card__fact-value"
          >
            materials
          </dd>
        </div>
      </dl>
    </div>
    <div
      class="rh-card__footer"
    >
      <div
        class="rh-evidence-card__footer"
      >
        <span
          class="rh-source-anchor rh-source-anchor--inline"
        >
          <span
            class="rh-source-anchor__row"
          >
            <a
              aria-label="Open source at A0017-3 · p.6 · B0081 · chars 1204–1361"
              class="rh-source-anchor__open"
              href="rh://artifact/A0017-3?page=6&block=B0081"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-quote rh-icon"
                data-icon="quote"
                fill="none"
                focusable="false"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
                />
                <path
                  d="M5 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
                />
              </svg>
              <span
                class="rh-source-anchor__target"
              >
                A0017-3 · p.6 · B0081 · chars 1204–1361
              </span>
            </a>
          </span>
        </span>
      </div>
    </div>
  </article>
</div>
`;
